--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: flask-natixis-app
     env: python
     plan: free
+    rootDir: .
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
