--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,5 @@ services:
     name: flask-natixis-app
     env: python
     plan: free
-    buildCommand: pip install --upgrade pip setuptools wheel && pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.7
-      - key: FINNHUB_API_KEY
-        sync: false
-      - key: POLYGON_API_KEY
-        sync: false
