--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,17 @@ services:
     name: flask-natixis-app
     env: python
     plan: free
+    autoDeploy: false
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.7
+      - key: FINNHUB_API_KEY
+        sync: false
+      - key: POLYGON_API_KEY
+        sync: false
+      - key: FLASK_ENV
+        value: production
+      - key: FLASK_DEBUG
+        value: false
