Update service name in render.yaml to flask-financial-analysis-app

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: flask-mathis-app
+    name: flask-financial-analysis-app
     env: python
     plan: free
     autoDeploy: false
